--- a/todolist_app/templates/base.html
+++ b/todolist_app/templates/base.html
@@ -18,12 +18,13 @@
       <a class="nav-item nav-link" href="{% url 'add' %}">Add Client</a>
       <a class="nav-item nav-link" href="{% url 'todolist' %}">Pending Task</a>
       <a class="nav-item nav-link" href="{% url 'todolist2' %}">Ram Page</a>
-      <!--<a class="nav-item nav-link" href="{% url 'todolist4' %}">Pavithra Page</a>-->
       <a class="nav-item nav-link" href="{% url 'todolist1' %}">Arul Page</a>
+      <!--<a class="nav-item nav-link" href="{% url 'todolist4' %}">Pavithra Page</a>
       <a class="nav-item nav-link" href="{% url 'todolist3' %}">Akash Page</a>
-      <a class="nav-item nav-link" href="{% url 'todolist5' %}">Hithesh Page</a>
+      <a class="nav-item nav-link" href="{% url 'todolist5' %}">Hithesh Page</a>-->
       <a class="nav-item nav-link" href="{% url 'todolist6' %}">Kalai Page</a>
       <a class="nav-item nav-link" href="{% url 'todolist7' %}">Surya Page</a>
+      <a class="nav-item nav-link" href="{% url 'file_report' %}">File Management</a>
       <a class="nav-item nav-link" href="{% url 'dailyworkreport' %}">Hourly Work Report</a>
       <a class="nav-item nav-link" href="{% url 'login' %}">Log Out</a>
       
