--- a/todolist_app/templates/dailyworkreport.html
+++ b/todolist_app/templates/dailyworkreport.html
@@ -17,8 +17,8 @@
         <!--<center><h1>ALL DETAILS </h1></br>-->
         <center>
         <a href="{% url 'pdf1' %}" class="btn btn-primary">KALAI WORKS </a></button>
-        <a href="{% url 'pdf2' %}" class="btn btn-primary">AKASH WORKS </a></button>
-        <a href="{% url 'pdf3' %}" class="btn btn-primary">HITHESH WORKS</a></button>
+        <!--<a href="{% url 'pdf2' %}" class="btn btn-primary">AKASH WORKS </a></button>
+        <a href="{% url 'pdf3' %}" class="btn btn-primary">HITHESH WORKS</a></button>-->
         <a href="{% url 'pdf4' %}" class="btn btn-primary">ARUL WORKS</a></button>
         <a href="{% url 'pdf5' %}" class="btn btn-primary">SURYA WORKS </a></button></br>
         <center><h3 style="color: red;">ALL WORKING REPORTS </h3></center></br>
